Seems like the img tag needs to retain the class for the width to work properly

--- a/guides/clone.html
+++ b/guides/clone.html
@@ -33,20 +33,20 @@
       <li>Copy the URL by clicking on the button on the right of the URL<br>
         <picture class="image">
           <source type="image/webp" srcset="../media/clone-1.webp" />
-          <img alt="Clone Repo #1" src="../media/clone-1.jpg"/>
+          <img class="image" alt="Clone Repo #1" src="../media/clone-1.jpg"/>
         </picture>
       </li>
       <li>Go to SourceTree and press the + button at the tab list, then press <i>Clone</i><br>
         <picture class="image">
           <source type="image/webp" srcset="../media/clone-2.webp" />
-          <img alt="Clone Repo #2" src="../media/clone-2.jpg"/>
+          <img class="image" alt="Clone Repo #2" src="../media/clone-2.jpg"/>
         </picture>
       </li>
       <li>Paste the URL onto the <i>Source Path/URL</i> field and wait for it to finish loading. Then press <i>Clone</i>
         <br><i>Optionally, define the directory where you want your project files to be located at (yellow arrow)</i><br>
         <picture class="image">
           <source type="image/webp" srcset="../media/clone-3.webp" />
-          <img alt="Clone Repo #3" src="../media/clone-3.jpg"/>
+          <img class="image" alt="Clone Repo #3" src="../media/clone-3.jpg"/>
         </picture>
       </li>
       <li>Wait for it to finish loading and you are done!</li>
