--- a/guides/commit.html
+++ b/guides/commit.html
@@ -32,7 +32,7 @@
         (Alternatively you can select <i>Stage All</i> to select all files)<br>
         <picture class="image">
           <source type="image/webp" srcset="../media/commit-1.webp" />
-          <img alt="Commit #1" src="../media/commit-1.jpg"/>
+          <img class="image" alt="Commit #1" src="../media/commit-1.jpg"/>
         </picture>
       </li>
       <li>The files you have selected should show up in the <i>Staged Files</i> section</li>
@@ -41,7 +41,7 @@
       <li>When you are done, click the commit button to commit the code<br>
         <picture class="image">
           <source type="image/webp" srcset="../media/commit-2.webp" />
-          <img alt="Commit #2" src="../media/commit-2.jpg"/>
+          <img class="image" alt="Commit #2" src="../media/commit-2.jpg"/>
         </picture>
       </li>
     </ol>
