--- a/guides/conflict-web.html
+++ b/guides/conflict-web.html
@@ -31,7 +31,7 @@
       <li>Click the "Resolve Conflicts" button if it appears during a MR<br>
         <picture class="image">
           <source type="image/webp" srcset="../media/gitlab/guide/conflict-1.webp" />
-          <img alt="Conflict Resolution Merge Request #1" src="../media/gitlab/guide/conflict-1.png"/>
+          <img class="image" alt="Conflict Resolution Merge Request #1" src="../media/gitlab/guide/conflict-1.png"/>
         </picture>
       </li>
       <li>GitLab <i class="fab fa-gitlab"></i> will show you the files that are currently conflicting. From there you have 2 modes you can use: <ul>
@@ -39,7 +39,7 @@
         This mode will allow you look at the conflict and select either one of them to use as conflict resolution<br>
         <picture class="image">
           <source type="image/webp" srcset="../media/gitlab/guide/conflict-2.webp" />
-          <img alt="Conflict Resolution Merge Request Interactive Mode" src="../media/gitlab/guide/conflict-2.png"/>
+          <img class="image" alt="Conflict Resolution Merge Request Interactive Mode" src="../media/gitlab/guide/conflict-2.png"/>
         </picture>
         </li>
         <li><span><b>Manual Inline Mode</b></span><br>
@@ -47,20 +47,20 @@
           <b>Note: In this mode, you need to remove the 3 lines (&lt;&lt;&lt;, &gt;&gt;&gt; and ===) or errors may occur</b><br>
           <picture class="image">
             <source type="image/webp" srcset="../media/gitlab/guide/conflict-3.webp" />
-            <img alt="Conflict Resolution Merge Request Manual Inline Mode" src="../media/gitlab/guide/conflict-3.png"/>
+            <img class="image" alt="Conflict Resolution Merge Request Manual Inline Mode" src="../media/gitlab/guide/conflict-3.png"/>
           </picture>
           </li>
       </ul></li>
       <li>After resolving the conflict using either of the modes, enter your Commit Message for the conflict resolution and click "Commit"<br>
         <picture class="image">
           <source type="image/webp" srcset="../media/gitlab/guide/conflict-4.webp" />
-          <img alt="Conflict Resolution Merge Request #2" src="../media/gitlab/guide/conflict-4.png"/>
+          <img class="image" alt="Conflict Resolution Merge Request #2" src="../media/gitlab/guide/conflict-4.png"/>
         </picture>
       </li>
       <li>Ensure that your conflict has been resolved (Button shows "Merge" or "Merge when pipeline succeeds")<br>
         <picture class="image">
           <source type="image/webp" srcset="../media/gitlab/guide/conflict-5.webp" />
-          <img alt="Conflict Resolution Merge Request #3" src="../media/gitlab/guide/conflict-5.png"/>
+          <img class="image" alt="Conflict Resolution Merge Request #3" src="../media/gitlab/guide/conflict-5.png"/>
         </picture>
       </li>
     </ol>
