--- a/guides/conflict.html
+++ b/guides/conflict.html
@@ -31,7 +31,7 @@
       <li>If a merge conflict occurs (either through pull or rebase or whatever), an error will pop up somewhere along the lines shown in this console window<br>
         <picture class="image">
           <source type="image/webp" srcset="../media/conflict-1.webp" />
-          <img alt="Conflict Resolution #1" src="../media/conflict-1.jpg"/>
+          <img class="image" alt="Conflict Resolution #1" src="../media/conflict-1.jpg"/>
         </picture>
       </li>
       <li>When then happen, check the files that have conflicted (you can see it in the console or in the File Status tab on SourceTree where they will display them as ! files)</li>
@@ -40,20 +40,20 @@
         <span><b>Before Conflict Resolution</b><br>
           <picture class="image">
             <source type="image/webp" srcset="../media/conflict-2.webp" />
-            <img alt="Conflict Resolution #2" src="../media/conflict-2.jpg"/>
+            <img class="image" alt="Conflict Resolution #2" src="../media/conflict-2.jpg"/>
           </picture>
         <br></span>
         <span><b>After Conflict Resolution</b><br>
           <picture class="image">
             <source type="image/webp" srcset="../media/conflict-3.webp" />
-            <img alt="Conflict Resolution #3" src="../media/conflict-3.jpg"/>
+            <img class="image" alt="Conflict Resolution #3" src="../media/conflict-3.jpg"/>
           </picture>
         <br></span>
       </li>
       <li>Head back to SourceTree and select the resolved conflicted files in <i>Unstaged Files</i> and stage them accordingly<br>
         <picture class="image">
           <source type="image/webp" srcset="../media/conflict-4.webp" />
-          <img alt="Conflict Resolution #4" src="../media/conflict-4.jpg"/>
+          <img class="image" alt="Conflict Resolution #4" src="../media/conflict-4.jpg"/>
         </picture>
       </li>
       <li>Tell git to continue the operation you are doing<br>
@@ -61,7 +61,7 @@
         If you are doing a rebase, go back to the console and execute <pre class="prettyprint">git rebase --continue</pre> (See pic below)<br>
         <picture class="image">
           <source type="image/webp" srcset="../media/conflict-5.webp" />
-          <img alt="Conflict Resolution #5" src="../media/conflict-5.jpg"/>
+          <img class="image" alt="Conflict Resolution #5" src="../media/conflict-5.jpg"/>
         </picture>
       </li>
     </ol>
