--- a/guides/github.html
+++ b/guides/github.html
@@ -38,7 +38,7 @@
     <h2><a id="jump-mics"></a>Main Interface and Code Screen</h2>
     <picture class="image">
       <source type="image/webp" srcset="../media/ghst/main-1.webp" />
-      <img alt="Main Page" src="../media/ghst/main-1.png" />
+      <img class="image" alt="Main Page" src="../media/ghst/main-1.png" />
     </picture>
     <ol>
       <li>Repository Statistics: Total Commits, Branches, Releases and Contributors. Clicking on the thin colored line will provide a list of languages detected in the repository</li>
@@ -55,7 +55,7 @@
     <br>
     <picture class="image">
       <source type="image/webp" srcset="../media/ghst/code-1.webp" />
-      <img alt="Code View Page" src="../media/ghst/code-1.png" />
+      <img class="image" alt="Code View Page" src="../media/ghst/code-1.png" />
     </picture>
     <ol>
       <li>Dropdown box to switch branches</li>
@@ -71,7 +71,7 @@
     <br>
     <picture class="image">
       <source type="image/webp" srcset="../media/ghst/code-2.webp" />
-      <img alt="Code Edit Page" src="../media/ghst/code-2.png" />
+      <img class="image" alt="Code Edit Page" src="../media/ghst/code-2.png" />
     </picture>
     <ol>
       <li>Preview changes made to the file</li>
@@ -85,7 +85,7 @@
     <h2><a id="jump-issue"></a>Issue Screen</h2>
     <picture class="image">
       <source type="image/webp" srcset="../media/ghst/issue-1.webp" />
-      <img alt="Issue List" src="../media/ghst/issue-1.png" />
+      <img class="image" alt="Issue List" src="../media/ghst/issue-1.png" />
     </picture>
     <ol>
       <li>Button to create a new issue</li>
@@ -96,7 +96,7 @@
     <br>
     <picture class="image">
       <source type="image/webp" srcset="../media/ghst/issue-2.webp" />
-      <img alt="Issue View Page" src="../media/ghst/issue-2.png" />
+      <img class="image" alt="Issue View Page" src="../media/ghst/issue-2.png" />
     </picture>
     <ol>
       <li>Button to edit title or create a new issue</li>
@@ -119,7 +119,7 @@
     <h2><a id="jump-pr"></a>Pull Requests (PR) Screen</h2>
     <picture class="image">
       <source type="image/webp" srcset="../media/ghst/pr-1.webp" />
-      <img alt="Pull Requests List" src="../media/ghst/pr-1.png" />
+      <img class="image" alt="Pull Requests List" src="../media/ghst/pr-1.png" />
     </picture>
     <ol>
       <li>Button to create a new pull request</li>
@@ -130,7 +130,7 @@
     <br>
     <picture class="image">
       <source type="image/webp" srcset="../media/ghst/pr-2.webp" />
-      <img alt="Pull Request View Page" src="../media/ghst/pr-2.png" />
+      <img class="image" alt="Pull Request View Page" src="../media/ghst/pr-2.png" />
     </picture>
     <ol>
       <li>Button to edit PR title</li>
@@ -157,7 +157,7 @@
     <h2><a id="jump-project"></a>Project Screen (It's like Trello/JIRA)</h2>
     <picture class="image">
       <source type="image/webp" srcset="../media/ghst/proj-1.webp" />
-      <img alt="Issue Project Board List" src="../media/ghst/proj-1.png" />
+      <img class="image" alt="Issue Project Board List" src="../media/ghst/proj-1.png" />
     </picture>
     <ol>
       <li>Create new projects</li>
@@ -167,7 +167,7 @@
     <br>
     <picture class="image">
       <source type="image/webp" srcset="../media/ghst/proj-2.webp" />
-      <img alt="Issue Project Board Page" src="../media/ghst/proj-2.png" />
+      <img class="image" alt="Issue Project Board Page" src="../media/ghst/proj-2.png" />
     </picture>
     <ol>
       <li>Add issue cards (or add issue to the specific board)</li>
