--- a/guides/import-eclipse.html
+++ b/guides/import-eclipse.html
@@ -29,37 +29,37 @@
         <li>Click on <i>File &gt; Import</i><br>
           <picture class="image">
             <source type="image/webp" srcset="../media/eclipse-1.webp" />
-            <img alt="Import Project to Eclipse #1" src="../media/eclipse-1.jpg"/>
+            <img class="image" alt="Import Project to Eclipse #1" src="../media/eclipse-1.jpg"/>
           </picture>
         </li>
         <li>Select <i>Gradle &gt; Existing Gradle Project</i> and click Next<br>
           <picture class="image">
             <source type="image/webp" srcset="../media/eclipse-2.webp" />
-            <img alt="Import Project to Eclipse #2" src="../media/eclipse-2.jpg"/>
+            <img class="image" alt="Import Project to Eclipse #2" src="../media/eclipse-2.jpg"/>
           </picture>
         </li>
         <li>Enter the root path of the project directory and press Next<br>
           <picture class="image">
             <source type="image/webp" srcset="../media/eclipse-3.webp" />
-            <img alt="Import Project to Eclipse #3" src="../media/eclipse-3.jpg"/>
+            <img class="image" alt="Import Project to Eclipse #3" src="../media/eclipse-3.jpg"/>
           </picture>
         </li>
         <li>Continue spamming Next until you cannot do so, then click Finish<br>
           <picture class="image">
             <source type="image/webp" srcset="../media/eclipse-4.webp" />
-            <img alt="Import Project to Eclipse #4" src="../media/eclipse-4.jpg"/>
+            <img class="image" alt="Import Project to Eclipse #4" src="../media/eclipse-4.jpg"/>
           </picture>
         </li>
         <li>Note: If you receive this error as shown in the picture below, ignore it and press <i>OK</i><br>
           <picture class="image">
             <source type="image/webp" srcset="../media/eclipse-5.webp" />
-            <img alt="Import Project to Eclipse #5" src="../media/eclipse-5.jpg"/>
+            <img class="image" alt="Import Project to Eclipse #5" src="../media/eclipse-5.jpg"/>
           </picture>
         </li>
         <li>The source files can be found in <i>src/main/java</i><br>
           <picture class="image">
             <source type="image/webp" srcset="../media/eclipse-6.webp" />
-            <img alt="Import Project to Eclipse #6" src="../media/eclipse-6.jpg"/>
+            <img class="image" alt="Import Project to Eclipse #6" src="../media/eclipse-6.jpg"/>
           </picture>
         </li>
         <li>To run the program just press the Green Play button in the Toolbar as per normal</li>
