--- a/guides/import-intellij.html
+++ b/guides/import-intellij.html
@@ -29,32 +29,32 @@
       <li>Click the Import button <i>If you do not see the screen in the picture below, ensure that you have closed all project windows with File &gt; Close Project</i><br>
         <picture class="image">
           <source type="image/webp" srcset="../media/intellij-1.webp" />
-          <img alt="Import Project into IntelliJ #1" src="../media/intellij-1.jpg"/>
+          <img class="image" alt="Import Project into IntelliJ #1" src="../media/intellij-1.jpg"/>
         </picture>
       </li>
       <li>Navigate to the project directory and select the <i>build.gradle</i> file before clicking OK<br>
         <picture class="image">
           <source type="image/webp" srcset="../media/intellij-2.webp" />
-          <img alt="Import Project into IntelliJ #2" src="../media/intellij-2.jpg"/>
+          <img class="image" alt="Import Project into IntelliJ #2" src="../media/intellij-2.jpg"/>
         </picture>
       </li>
       <li>Ensure that <i>Use default gradle wrapper</i> is selected and click OK<br>
         <picture class="image">
           <source type="image/webp" srcset="../media/intellij-3.webp" />
-          <img alt="Import Project into IntelliJ #3" src="../media/intellij-3.jpg"/>
+          <img class="image" alt="Import Project into IntelliJ #3" src="../media/intellij-3.jpg"/>
         </picture>      
       </li>
       <li>Wait for IntelliJ to finish building the project</li>
       <li>The source files are located at <i>src &gt; main &gt; java</i><br>
         <picture class="image">
           <source type="image/webp" srcset="../media/intellij-4.webp" />
-          <img alt="Import Project into IntelliJ #4" src="../media/intellij-4.jpg"/>
+          <img class="image" alt="Import Project into IntelliJ #4" src="../media/intellij-4.jpg"/>
         </picture>
       </li>
       <li>To run the project, right click the main source file and select <i>Run</i><br>
         <picture class="image">
           <source type="image/webp" srcset="../media/intellij-5.webp" />
-          <img alt="Import Project into IntelliJ #5" src="../media/intellij-5.jpg"/>
+          <img class="image" alt="Import Project into IntelliJ #5" src="../media/intellij-5.jpg"/>
         </picture>
       </li>
     </ol>
