--- a/guides/pipeline.html
+++ b/guides/pipeline.html
@@ -35,19 +35,19 @@
         <i>Alternatively you can click on the Pipeline # hyperlink to go straight into the pipeline</i><br>
         <picture class="image">
           <source type="image/webp" srcset="../media/gitlab/guide/pipeline-1.webp" />
-          <img alt="View GitLab CI #1" src="../media/gitlab/guide/pipeline-1.png"/>
+          <img class="image" alt="View GitLab CI #1" src="../media/gitlab/guide/pipeline-1.png"/>
         </picture>
       </li>
       <li>Click on the build/test you wish to check the logs on<br>
         <picture class="image">
           <source type="image/webp" srcset="../media/gitlab/guide/pipeline-2.webp" />
-          <img alt="View GitLab CI #2" src="../media/gitlab/guide/pipeline-2.png"/>
+          <img class="image" alt="View GitLab CI #2" src="../media/gitlab/guide/pipeline-2.png"/>
         </picture>
       </li>
       <li>You can now view the logs as shown in the picture below<br>
         <picture class="image">
           <source type="image/webp" srcset="../media/gitlab/guide/pipeline-3.webp" />
-          <img alt="View GitLab CI #3" src="../media/gitlab/guide/pipeline-3.png"/>
+          <img class="image" alt="View GitLab CI #3" src="../media/gitlab/guide/pipeline-3.png"/>
         </picture>
       </li>
     </ol>
