--- a/guides/pull.html
+++ b/guides/pull.html
@@ -33,7 +33,7 @@
       <li>Click the <i>Pull</i> Button<br>
         <picture class="image">
           <source type="image/webp" srcset="../media/pull-1.webp" />
-          <img alt="Pull code from Origin #1" src="../media/pull-1.jpg"/>
+          <img class="image" alt="Pull code from Origin #1" src="../media/pull-1.jpg"/>
         </picture>
       </li>
       <li>Double check that the remote and local branches match<br>
@@ -41,7 +41,7 @@
       <li>Press OK to confirm and pull new changes<br>
         <picture class="image">
           <source type="image/webp" srcset="../media/pull-2.webp" />
-          <img alt="Pull Code from Origin #2" src="../media/pull-2.jpg"/>
+          <img class="image" alt="Pull Code from Origin #2" src="../media/pull-2.jpg"/>
         </picture>
       </li>
     </ol>    
