--- a/guides/rebase.html
+++ b/guides/rebase.html
@@ -35,13 +35,13 @@
       <li>Ensure that your branch is selected and click the <i>Terminal</i> button<br>
         <picture class="image">
           <source type="image/webp" srcset="../media/rebase-1.webp" />
-          <img alt="Rebase Commit #1" src="../media/rebase-1.jpg"/>
+          <img class="image" alt="Rebase Commit #1" src="../media/rebase-1.jpg"/>
         </picture>
       </li>
       <li>Execute the following command <pre class="prettyprint">git rebase "branch name"</pre>, replacing "branch name" with the name of the branch you are rebasing from (in the case of the picture below, it is the master branch we are rebasing from)<br>
         <picture class="image">
           <source type="image/webp" srcset="../media/rebase-2.webp" />
-          <img alt="Rebase Commit #2" src="../media/rebase-2.jpg"/>
+          <img class="image" alt="Rebase Commit #2" src="../media/rebase-2.jpg"/>
         </picture>
       </li>
       <li>If you have no merge conflicts you are done! Otherwise look at <a href="conflict.html">Resolving Merge Conflicts</a> to resolve any conflicted code</li>
