--- a/guides/template.html
+++ b/guides/template.html
@@ -47,7 +47,7 @@
     <picture class="image">
       <source type="image/webp" srcset="../media/ntulogo.webp" />
       <!-- Image Default src with img tag -->
-      <img alt="Template" src="../media/ntulogo.png" />
+      <img class="image" alt="Template" src="../media/ntulogo.png" />
     </picture>
 
     <p id="description">Brief Description</p>
