--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
         <div class="imgcol"><b>Sample Branch Protection Rule Configuration</b><br>
           <picture class="image">
             <source type="image/webp" srcset="media/branch-protect-1.webp" />
-            <img alt="GitHub Branch Protection Img #1" src="media/branch-protect-1.jpg" />
+            <img class="image" alt="GitHub Branch Protection Img #1" src="media/branch-protect-1.jpg" />
           </picture></div>
         <div class="imgcol"><b>Branch Protection in place</b><br>
           <picture class="image">
             <source type="image/webp" srcset="media/branch-protect-2.webp" />
-            <img alt="GitHub Branch Protection Img #2" src="media/branch-protect-2.jpg" />
+            <img class="image" alt="GitHub Branch Protection Img #2" src="media/branch-protect-2.jpg" />
           </picture>
           </div>
       </div>
