--- a/guides/amend.html
+++ b/guides/amend.html
@@ -33,14 +33,14 @@
       <li>Select the <i>Terminal</i> button<br>
         <picture class="image">
           <source type="image/webp" srcset="../media/amend-1.webp" />
-          <img alt="Amend Commit #1" src="../media/amend-1.jpg"/>
+          <img class="image" alt="Amend Commit #1" src="../media/amend-1.jpg"/>
         </picture>
       </li>
       <li>Execute the following command <pre class="prettyprint">git commit --amend</pre></li>
       <li>Update your commit message and save and exit it (In the nano app as shown in the picture below, its Ctrl+O and Ctrl+W)<br>
         <picture class="image">
           <source type="image/webp" srcset="../media/amend-2.webp" />
-          <img alt="Amend Commit #2" src="../media/amend-2.jpg"/>
+          <img class="image" alt="Amend Commit #2" src="../media/amend-2.jpg"/>
         </picture></li>
       <li>You are done!</li>
     </ol>
