--- a/guides/buildserver.html
+++ b/guides/buildserver.html
@@ -33,19 +33,19 @@
       <li>Go too your PR (or commit) and click the <i>Details</i> link<br>
         <picture class="image">
           <source type="image/webp" srcset="../media/travis-1.webp" />
-          <img alt="Travis CI #1" src="../media/travis-1.jpg"/>
+          <img class="image" alt="Travis CI #1" src="../media/travis-1.jpg"/>
         </picture>
       </li>
       <li>Click on the link for <i>the build</i> like shown in the picture below<br>
         <picture class="image">
           <source type="image/webp" srcset="../media/travis-2.webp" />
-          <img alt="Travis CI #2" src="../media/travis-2.jpg"/>
+          <img class="image" alt="Travis CI #2" src="../media/travis-2.jpg"/>
         </picture>
       </li>
       <li>You can now view the logs as shown in the picture below<br>
         <picture class="image">
           <source type="image/webp" srcset="../media/travis-3.webp" />
-          <img alt="Travis CI #3" src="../media/travis-3.jpg"/>
+          <img class="image" alt="Travis CI #3" src="../media/travis-3.jpg"/>
         </picture>
       </li>
     </ol>
