--- a/guides/clone-gitlab.html
+++ b/guides/clone-gitlab.html
@@ -33,19 +33,19 @@
       <li>Copy the <b>HTTPS</b> Clone URL by clicking on the copy button on the right of the URL<br>
         <picture class="image">
           <source type="image/webp" srcset="../media/gitlab/guide/clone-1.webp" />
-          <img alt="GitLab Clone #1" src="../media/gitlab/guide/clone-1.png"/>
+          <img class="image" alt="GitLab Clone #1" src="../media/gitlab/guide/clone-1.png"/>
         </picture>
       </li>
       <li>Go to SourceTree and press the + button at the tab list, then press <i>Clone</i><br>
         <picture class="image">
           <source type="image/webp" srcset="../media/gitlab/guide/clone-2.webp" />
-          <img alt="GitLab Clone #2" src="../media/gitlab/guide/clone-2.png"/>
+          <img class="image" alt="GitLab Clone #2" src="../media/gitlab/guide/clone-2.png"/>
         </picture></li>
       <li>Paste the URL onto the <i>Source Path/URL</i> field and wait for it to finish loading. Then press <i>Clone</i>
       <br><i>Optionally, define the directory where you want your project files to be located at (yellow arrow)</i><br>
         <picture class="image">
           <source type="image/webp" srcset="../media/gitlab/guide/clone-3.webp" />
-          <img alt="GitLab Clone #3" src="../media/gitlab/guide/clone-3.png"/>
+          <img class="image" alt="GitLab Clone #3" src="../media/gitlab/guide/clone-3.png"/>
         </picture></li>
       <li>Wait for it to finish loading and you are done!</li>
     </ol>
