--- a/guides/gitlab.html
+++ b/guides/gitlab.html
@@ -41,7 +41,7 @@
     <h2><a id="jump-mics"></a>Main Interface and Code Screen</h2>
     <picture class="image">
       <source type="image/webp" srcset="../media/gitlab/main/main.webp" />
-      <img alt="Main Interface" src="../media/gitlab/main/main.jpg" />
+      <img class="image" alt="Main Interface" src="../media/gitlab/main/main.jpg" />
     </picture>
     <ol>
       <li>Repository Statistics: Licenses, Total Commits, Branches, Tags, Disk Space Used and Contributors. Hovering on the thin colored line below will provide a list of languages detected in the repository</li>
@@ -64,7 +64,7 @@
     <br>
     <picture class="image">
       <source type="image/webp" srcset="../media/gitlab/main/code.webp" />
-      <img alt="Code View" src="../media/gitlab/main/code.jpg" />
+      <img class="image" alt="Code View" src="../media/gitlab/main/code.jpg" />
     </picture>
     <ol>
       <li>Dropdown box to switch branches</li>
@@ -90,7 +90,7 @@
     <br>
     <picture class="image">
       <source type="image/webp" srcset="../media/gitlab/main/edit.webp" />
-      <img alt="Edit File" src="../media/gitlab/main/edit.jpg" />
+      <img class="image" alt="Edit File" src="../media/gitlab/main/edit.jpg" />
     </picture>
     <ol>
       <li>Preview changes made to the file</li>
@@ -103,7 +103,7 @@
     <h2><a id="jump-issue"></a>Issue Screen</h2>
     <picture class="image">
       <source type="image/webp" srcset="../media/gitlab/issue/issuelist.webp" />
-      <img alt="Issue List" src="../media/gitlab/issue/issuelist.jpg" />
+      <img class="image" alt="Issue List" src="../media/gitlab/issue/issuelist.jpg" />
     </picture>
     <ol>
       <li>Button to create a new issue or do bulk modification of existing issues</li>
@@ -114,7 +114,7 @@
     <br>
     <picture class="image">
       <source type="image/webp" srcset="../media/gitlab/issue/issue.webp" />
-      <img alt="Issue Page" src="../media/gitlab/issue/issue.jpg" />
+      <img class="image" alt="Issue Page" src="../media/gitlab/issue/issue.jpg" />
     </picture>
     <ol>
       <li>Button to close or create a new issue</li>
@@ -135,7 +135,7 @@
     </ol>
     <picture class="image">
       <source type="image/webp" srcset="../media/gitlab/issue/new.webp" />
-      <img alt="New Issue" src="../media/gitlab/issue/new.jpg" />
+      <img class="image" alt="New Issue" src="../media/gitlab/issue/new.jpg" />
     </picture>
     <ol>
       <li>Issue title</li>
@@ -153,7 +153,7 @@
     <h2><a id="jump-mr"></a>Merge Requests (MR) Screen</h2>
     <picture class="image">
       <source type="image/webp" srcset="../media/gitlab/mr/mrlist.webp" />
-      <img alt="Merge Request List" src="../media/gitlab/mr/mrlist.jpg" />
+      <img class="image" alt="Merge Request List" src="../media/gitlab/mr/mrlist.jpg" />
     </picture>
     <ol>
       <li>Button to create a new MR or do bulk modification of MRs</li>
@@ -164,7 +164,7 @@
     <br>
     <picture class="image">
       <source type="image/webp" srcset="../media/gitlab/mr/mr.webp" />
-      <img alt="Merge Request Page" src="../media/gitlab/mr/mr.jpg" />
+      <img class="image" alt="Merge Request Page" src="../media/gitlab/mr/mr.jpg" />
     </picture>
     <ol>
       <li>Button to edit or close the MR</li>
@@ -189,7 +189,7 @@
     </ol>
     <picture class="image">
       <source type="image/webp" srcset="../media/gitlab/mr/new.webp" />
-      <img alt="New Merge Request" src="../media/gitlab/mr/new.jpg" />
+      <img class="image" alt="New Merge Request" src="../media/gitlab/mr/new.jpg" />
     </picture>
     <ol>
       <li>Merge Request Title</li>
@@ -208,7 +208,7 @@
     <h2><a id="jump-board"></a>Issue Boards Screen (It's like Trello/JIRA)</h2>
     <picture class="image">
       <source type="image/webp" srcset="../media/gitlab/board/issueboard.webp" />
-      <img alt="Issue Board" src="../media/gitlab/board/issueboard.jpg" />
+      <img class="image" alt="Issue Board" src="../media/gitlab/board/issueboard.jpg" />
     </picture>
     <ol>
       <li>Add issues to the board/column</li>
@@ -221,7 +221,7 @@
     <h2><a id="jump-ci"></a>CI/CD Pipelines</h2>
     <picture class="image">
       <source type="image/webp" srcset="../media/gitlab/cicd/pipelinelist.webp" />
-      <img alt="Pipeline List" src="../media/gitlab/cicd/pipelinelist.jpg" />
+      <img class="image" alt="Pipeline List" src="../media/gitlab/cicd/pipelinelist.jpg" />
     </picture>
     <ol>
       <li>Buttons to manually run the pipeline, clear caches or error check gitlab-ci.yml file</li>
@@ -238,7 +238,7 @@
     <br>
     <picture class="image">
       <source type="image/webp" srcset="../media/gitlab/cicd/pipeline.webp" />
-      <img alt="Pipeline/Job List" src="../media/gitlab/cicd/pipeline.jpg" />
+      <img class="image" alt="Pipeline/Job List" src="../media/gitlab/cicd/pipeline.jpg" />
     </picture>
     <ol>
       <li>Pipeline Information (Commit Title, number and duration of jobs, tags and current commit number)</li>
@@ -252,7 +252,7 @@
     <br>
     <picture class="image">
       <source type="image/webp" srcset="../media/gitlab/cicd/job.webp" />
-      <img alt="Job Information" src="../media/gitlab/cicd/job.jpg" />
+      <img class="image" alt="Job Information" src="../media/gitlab/cicd/job.jpg" />
     </picture>
     <ol>
       <li>Information regarding the current job</li>
@@ -271,7 +271,7 @@
     <h2><a id="jump-ide"></a>Web IDE (A <i class="fab fa-gitlab"></i> exclusive!)</h2>
     <picture class="image">
       <source type="image/webp" srcset="../media/gitlab/webide/edit.webp" />
-      <img alt="Web IDE Edit View" src="../media/gitlab/webide/edit.jpg" />
+      <img class="image" alt="Web IDE Edit View" src="../media/gitlab/webide/edit.jpg" />
     </picture>
     <ol>
       <li>List of currently opened documents</li>
@@ -283,7 +283,7 @@
     <br>
     <picture class="image">
       <source type="image/webp" srcset="../media/gitlab/webide/review.webp" />
-      <img alt="Web IDE Review View" src="../media/gitlab/webide/review.jpg" />
+      <img class="image" alt="Web IDE Review View" src="../media/gitlab/webide/review.jpg" />
     </picture>
     <ol>
       <li>Button to stage or discard changes to this file</li>
@@ -296,7 +296,7 @@
     <br>
     <picture class="image">
       <source type="image/webp" srcset="../media/gitlab/webide/commit.webp" />
-      <img alt="Web IDE Commit View" src="../media/gitlab/webide/commit.jpg" />
+      <img class="image" alt="Web IDE Commit View" src="../media/gitlab/webide/commit.jpg" />
     </picture>
     <ol>
       <li>A diff of the file being changed (Left - Old, Right - New)</li>
