--- a/guides/pr.html
+++ b/guides/pr.html
@@ -40,7 +40,7 @@
         <li>Click <i>Create Branch</i> to confirm branch creation<br>
           <picture class="image">
             <source type="image/webp" srcset="../media/pr-1.webp" />
-            <img alt="Issue Pull Request for Feature #1" src="../media/pr-1.jpg"/>
+            <img class="image" alt="Issue Pull Request for Feature #1" src="../media/pr-1.jpg"/>
           </picture>
         </li>
         <li>Do your necessary code implementation/fixes/changes<br>
@@ -49,7 +49,7 @@
         <li>You should be able to see your branch name highlighted in yellow, find your branch and select <i>Compare and Pull Request</i><br>
           <picture class="image">
             <source type="image/webp" srcset="../media/pr-2.webp" />
-            <img alt="Issue Pull Request for Feature #2" src="../media/pr-2.jpg"/>
+            <img class="image" alt="Issue Pull Request for Feature #2" src="../media/pr-2.jpg"/>
           </picture>
         </li>
         <li><i>Note: If it does not show up, manually create the PR by going to the Pull Request tab and select "Create Pull Request", after which select your branch in the compare dropdown box</i></li>
@@ -57,26 +57,26 @@
         <li>When you are done, create the PR by clicking the green <i>Create Pull Request</i> button<br>
           <picture class="image">
             <source type="image/webp" srcset="../media/pr-3.webp" />
-            <img alt="Issue Pull Request for Feature #3" src="../media/pr-3.jpg"/>
+            <img class="image" alt="Issue Pull Request for Feature #3" src="../media/pr-3.jpg"/>
           </picture>
         </li>
         <li>Now we play the waiting game until a green tick appears and it says <i>All checks have passed</i> (Note: If it fails, your code is not compiling and needs to be fixed)</li>
         <li>If all checks have passed, either you or anyone else can go ahead and click the green <i>Merge Pull Request</i> button<br>
           <picture class="image">
             <source type="image/webp" srcset="../media/pr-4.webp" />
-            <img alt="Issue Pull Request for Feature #4" src="../media/pr-4.jpg"/>
+            <img class="image" alt="Issue Pull Request for Feature #4" src="../media/pr-4.jpg"/>
           </picture>
         </li>
         <li>Continue clicking <i>Confirm merge</i> here<br>
           <picture class="image">
             <source type="image/webp" srcset="../media/pr-5.webp" />
-            <img alt="Issue Pull Request for Feature #5" src="../media/pr-5.jpg"/>
+            <img class="image" alt="Issue Pull Request for Feature #5" src="../media/pr-5.jpg"/>
           </picture>
         </li>
         <li>When you are done you can switch back to the master branch (you may now delete the branch if you want, though its entirely optional)<br>
           <picture class="image">
             <source type="image/webp" srcset="../media/pr-6.webp" />
-            <img alt="Issue Pull Request for Feature #6" src="../media/pr-6.jpg"/>
+            <img class="image" alt="Issue Pull Request for Feature #6" src="../media/pr-6.jpg"/>
           </picture>
         </li>
       </ol>
