--- a/guides/webide.html
+++ b/guides/webide.html
@@ -31,14 +31,14 @@
       <li>Click on the "Web IDE" button<br>
         <picture class="image">
           <source type="image/webp" srcset="../media/gitlab/guide/webide-1.webp" />
-          <img alt="Use GitLab Web IDE #1" src="../media/gitlab/guide/webide-1.png"/>
+          <img class="image" alt="Use GitLab Web IDE #1" src="../media/gitlab/guide/webide-1.png"/>
         </picture>
       </li>
       <li>Select the files you need to modify and edit them from the browser directly</li>
       <li>When you are done, click on the "Commit" button to enter the "Review" stage<br>
         <picture class="image">
           <source type="image/webp" srcset="../media/gitlab/guide/webide-2.webp" />
-          <img alt="GitLab Web IDE Workspace" src="../media/gitlab/guide/webide-2.png"/>
+          <img class="image" alt="GitLab Web IDE Workspace" src="../media/gitlab/guide/webide-2.png"/>
         </picture>
       </li>
       <li>In this stage, review all of your changes per file to ensure that they are correct and stage/discard them accordingly<br>
@@ -47,7 +47,7 @@
       <li>When you are done reviewing, click the "Commit" button again<br>
         <picture class="image">
           <source type="image/webp" srcset="../media/gitlab/guide/webide-3.webp" />
-          <img alt="GitLab Web IDE Review Page" src="../media/gitlab/guide/webide-3.png"/>
+          <img class="image" alt="GitLab Web IDE Review Page" src="../media/gitlab/guide/webide-3.png"/>
         </picture>
       </li>
       <li>Enter the commit message for these changes you have done</li>
@@ -59,7 +59,7 @@
         <i>For more information on creating a MR head over to <a href="mr.html">Creating a feature and Merge Request</a> for more information</i><br>
         <picture class="image">
           <source type="image/webp" srcset="../media/gitlab/guide/webide-4.webp" />
-          <img alt="GitLab Web IDE Commit Page" src="../media/gitlab/guide/webide-4.png"/>
+          <img class="image" alt="GitLab Web IDE Commit Page" src="../media/gitlab/guide/webide-4.png"/>
         </picture>
       </li>
     </ol>
