Minor code fixes

--- a/guides/mr.html
+++ b/guides/mr.html
@@ -100,7 +100,7 @@
       git checkout -b "branchname" # Checkouts a new branch
       git add [-A] "file" # Adds file to Commit
       git commit -m "Message" # Commits messages
-      git push # Push commits to GitHub
+      git push # Push commits to GitLab
       git checkout master # Go back to master
       git branch -d "branchname" # Deletes the branch
     </pre>
