Remove SRI as it is deprecated

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
-    <script src="https://kit.fontawesome.com/0ddd961caf.js" integrity="sha384-77qKPo2YY8GA9nvRZG0ePJHUXw+olOD2UH6gGJjIL7/DDqVQcdACgVCd31ANHcxL" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/0ddd961caf.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
